// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookableForm component Template should render correctly 1`] = `
"<form id=\\"bookable\\" data-test=\\"form\\" class=\\"bookable mx-4 mx-auto w-full\\">
  <div icon-name=\\"edit\\">
    <text-field-stub modelvalue=\\"Couch\\" placeholder=\\"Mock translation\\" data-test=\\"form-name\\"></text-field-stub>
  </div>
  <div icon-name=\\"document-one-page\\">
    <text-field-stub modelvalue=\\"Super long description\\" placeholder=\\"Mock translation\\" data-test=\\"form-description\\"></text-field-stub>
  </div>
</form>"
`;

exports[`BookableForm component Template should render correctly with new bookable 1`] = `
"<form id=\\"bookable\\" data-test=\\"form\\" class=\\"bookable mx-4 mx-auto w-full\\">
  <div icon-name=\\"edit\\">
    <text-field-stub modelvalue=\\"\\" placeholder=\\"Mock translation\\" data-test=\\"form-name\\"></text-field-stub>
  </div>
  <div icon-name=\\"document-one-page\\">
    <text-field-stub modelvalue=\\"\\" placeholder=\\"Mock translation\\" data-test=\\"form-description\\"></text-field-stub>
  </div>
</form>"
`;
